# boids

./: README.md  boids.py  main.py
.devcontainer/: devcontainer.json
impl/python/betterprogramming/: boid.py  main.py  requirements.txt
impl/rust/boid/: Cargo.toml
impl/rust/boid/config/: display.ron
impl/rust/boid/src/: main.rs
