[package]
name = "boid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#nannou = "0.18.1"
#macroquad = "*"
#egui = "*"
#tracing-subscriber = "0.3"
#eframe = "*"
amethyst = { version = "0.15", features = ["no-slow-safety-checks", "vulkan"] }
